# mybrickworks

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
bundles/olist_lakehouse/: README.md  databricks.local.yml.example  databricks.yml  pyproject.toml
bundles/olist_lakehouse/notebooks/analysis/: delay_x_customer_satisfaction.py  rfm_segment.py
bundles/olist_lakehouse/notebooks/bronze/: kaggle_ingestion.ipynb
bundles/olist_lakehouse/notebooks/gold/: delivery_performance.py  sales_by_category.py  seller_scorecard.py
bundles/olist_lakehouse/notebooks/ingestion/: kaggle_ingestion_bronze.ipynb  kaggle_sdk_etl.ipynb
bundles/olist_lakehouse/notebooks/kaggle/: download_datasets.py
bundles/olist_lakehouse/notebooks/silver/: order_items.ipynb  orders.ipynb  products.ipynb  reviews.ipynb
bundles/olist_lakehouse/notebooks/tables/bronze/: autoloader_bronze.ipynb
bundles/olist_lakehouse/notebooks/tables/gold/: delivery_performance.py  sales_by_category.py  seller_scorecard.py  utils.py
bundles/olist_lakehouse/notebooks/tables/silver/: order_items.py  orders.py  products.py  reviews.py  utils.py
bundles/olist_lakehouse/resources/: bronze_kaggle_ingestion.job.yml  configure_auth.job.yml  download_datasets_job.job.yml  kaggle_ingestion_bronze.job.yml  kaggle_sdk_etl_bronze_job.job.yml  silver_transformations.job.yml
bundles/olist_lakehouse/resources/schemas/: bronze.schema.yml  gold.schema.yml  silver.schema.yml
bundles/olist_lakehouse/src/: configure_kaggle_auth.py
bundles/olist_lakehouse/src/olist_lakehouse/: __init__.py  download_datasets.py  ingestion.py  readers.py  transformations.py
bundles/olist_lakehouse/src/tables/bronze/: ingestion_csv.py
bundles/olist_lakehouse/src/tables/gold/: delivery_performance.py  sales_by_category.py  seller_scorecard.py
bundles/olist_lakehouse/src/tables/silver/: order_items.py  orders.py  products.py  reviews.py
libs/brickworks_core/: pyproject.toml
src/analysis/: delay_x_customer_satisfaction.py  rfm_segment.py
src/bronze/: ingestion_csv.py
src/gold/: sales_by_category.py  seller_scorecard.py
src/silver/: order_items.py  orders.py  products.py  reviews.py  silver_orders.py  silver_products.py  silver_reviews.py  utils.py
src/tables/gold/: delivery_performance.py  sales_by_category.py  seller_scorecard.py  utils.py
src/tables/silver/: order_items.py  orders.py  products.py  reviews.py
