[project]
name = "databricks-catalog-olist"
version = "0.1.0"
description = "Add Olist data easily to your Databricks workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modern syntax)
    "S",   # flake8-bandit (security checks for data pipelines)
    "NPY", # numpy-specific rules
]

ignore = ["F821"]

[tool.ruff.lint.isort]
# Treat specific internal packages as first-party
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
