[project]
name = "mybrickworks"
version = "0.0.1"
description = "My Databricks data platform, luizhtc"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-connect>=16.1.7",
    "databricks-sdk>=0.117.0",
    "pyspark>=4.1.2",
    "pytest>=9.0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modern syntax)
    "S",   # flake8-bandit (security checks for data pipelines)
    "NPY", # numpy-specific rules
]

ignore = ["F821"]

[tool.ruff.lint.isort]
# Treat specific internal packages as first-party
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
