[project]
name = "mybrickworks"
version = "0.0.1"
description = "My Databricks data platform, by luizhtc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["libs/*", "bundles/*"]

[tool.uv.sources]
brickworks-core = { workspace = true }

[dependency-groups]
dev = [
    "pip>=26.1",
    "databricks-connect>=16.1.7",
    "databricks-sdk>=0.117.0",
    "delta-spark>=3.2.0",
    "pytest>=9.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modern syntax)
    "S",   # flake8-bandit (security checks for data pipelines)
    "NPY", # numpy-specific rules
]
ignore = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["brickworks_core", "olist_lakehouse"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["libs", "bundles"]
