[project]
name = "olist-lakehouse"
version = "0.0.1"
description = "Data Product based on Olist datasets."
requires-python = ">=3.12"
dependencies = [
    "brickworks-core",
    "kagglehub>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olist_lakehouse"]
