[project]
name = "brickworks-core"
version = "0.0.1"
description = "Reusable primitives, functions and objects for Data Engineering"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brickworks_core"]